# qkd_reconciliation_lectures

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: deploy.yml  main.yml
code/: pyproject.toml
code/error_correction/: binary_entropy.py  channels.py  codes.py  decoders.py  main.py  outputs.py  performance.py  plots.py  plotter.py  utils.py
code/error_correction/utilities/: __init__.py
code/notebooks/: LDPC_performance.ipynb
scripts/: generate_release_notes.lua  release.sh  update_changelog.lua  version.sh
slides/: package-lock.json  package.json  vite.config.ts
slides/bari_master_qst/: package-lock.json  package.json  slides.md  slidev.config.ts
slides/bari_master_qst/components/: Definition.vue  MyColumns.vue  Theorem.vue
slides/bari_master_qst/img/: channel (3).drawio  reconciliation_intro.drawio
slides/bari_master_qst/layouts/: two-cols-header.vue
slides/decks/: slides.md
slides/decks/master_bari/: slides.md
slides/decks/public/: repetition.drawio  tanner.drawio
slides/slidev-theme-lq/: README.md  layoutHelper.ts  package.json
slides/slidev-theme-lq/components/: Box.vue  Theorem.vue
slides/slidev-theme-lq/layouts/: cover.vue  default.vue
src/: Makefile  biblio.bib  lecture1.tex  lecture2.tex  main.tex  main_template.tex  structure.tex
src/layout/: includes.tex  references.tex  structure.tex  titlepage.tex  toc.tex
src/lectures/: decoding.tex  introduction.tex  linear_codes.tex  privacy_amplification_implementation.tex  privacy_amplification_theory.tex  qkd_reconciliation.tex  source_coding.tex
(+3 files in other folders)
