[tool.poetry]
name = "error_correction"
version = "0.1.0"
description = "A collection of sample codes for the qkd reconciliation lectures"
authors = ["marco.cofano <marco.cofano@luxquanta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
scipy = "^1.14.1"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
